--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@
 	--color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
 	--color-sidebar-border: var(--sidebar-border);
 	--color-sidebar-ring: var(--sidebar-ring);
+	--bgfile: 'public/backgrnd.png';
 }
 
 :root {
@@ -111,7 +112,6 @@
 	--sidebar-border: oklch(1 0 0 / 10%);
 	--sidebar-ring: oklch(0.551 0.027 264.364);
 }
-
 @layer base {
 	* {
 		@apply border-border outline-ring/50;
@@ -128,5 +128,5 @@ body {
 }
 
 html {
-	background-color: var(--foreground);
+	background-color: var(--background);
 }
